kubernetes/traefik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: site-pulse-360
  namespace: site-pulse-360
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`${HOST}`) && PathPrefix(`/api`) && (Method(`POST`) || Method(`DELETE`))
    services:
    - kind: Service
      name: site-pulse-360-backend
      namespace: site-pulse-360
      port: 3000
      strategy: RoundRobin
    middlewares:
    - name: site-pulse-360-backend-basic-auth
      namespace: site-pulse-360
  - kind: Rule
    match: Host(`${HOST}`) && PathPrefix(`/api`)
    services:
    - kind: Service
      name: site-pulse-360-backend
      namespace: site-pulse-360
      port: 3000
      strategy: RoundRobin
  - kind: Rule
    match: Host(`${HOST}`)
    services:
    - kind: Service
      name: site-pulse-360-frontend
      namespace: site-pulse-360
      port: 8080
      strategy: RoundRobin
